:construction_worker: Update linker options for version's info

--- a/.slsa-goreleaser/darwin-amd64.yml
+++ b/.slsa-goreleaser/darwin-amd64.yml
@@ -33,3 +33,5 @@ ldflags:
   - "-X {{ .Env.MODULE_PATH }}/cmd.Version={{ .Env.VERSION }}"
   - "-X {{ .Env.MODULE_PATH }}/cmd.Commit={{ .Env.COMMIT }}"
   - "-X {{ .Env.MODULE_PATH }}/cmd.CommitDate={{ .Env.COMMIT_DATE }}"
+  - "-X {{ .Env.MODULE_PATH }}/cmd.Os={{ .Os }}"
+  - "-X {{ .Env.MODULE_PATH }}/cmd.Arch={{ .Arch }}"
