--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
-client_secret**.json
+*.json
 *.mp4
 *.jpg
 # Binaries for programs and plugins
