--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -24,7 +24,8 @@ jobs:
           days-before-pr-stale: 60
           days-before-issue-close: 15
           days-before-pr-close: 15
-          stale-issue-message: "Marked as stale because there has been no activity."
-          stale-pr-message: "Marked as stale because there has been no activity."
-          stale-issue-label: 'stale'
-          stale-pr-label: 'stale'
+          exempt-all-assignees: true
+          stale-issue-message: "Marked as stale since no activity for 30 days, close in 15 days if no activity."
+          stale-pr-message: "Marked as stale since no activity for 60 days, close in 15 days if no activity."
+          stale-issue-label: "stale"
+          stale-pr-label: "stale"
