--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,11 +2,17 @@ name: Test
 
 on:
   push:
-    branches:
-      - '*'
+    paths:
+      - 'cmd/**'
+      - 'pkg/**'
+      - 'go.mod'
+      - 'main.go'
   pull_request:
-    branches:
-      - '*'
+    paths:
+      - 'cmd/**'
+      - 'pkg/**'
+      - 'go.mod'
+      - 'main.go'
 
 jobs:
   test:
@@ -15,5 +21,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version-file: './go.mod'
+          go-version-file: ./go.mod
       - run: go test -v ./...
