--- a/.github/workflows/winget-release.yml
+++ b/.github/workflows/winget-release.yml
@@ -1,7 +1,8 @@
 name: Publish to WinGet
 on:
   release:
-    types: [released]
+    types:
+      - published
 jobs:
   publish:
     runs-on: windows-latest
