--- a/.github/workflows/go-ossf-slsa3-publish.yml
+++ b/.github/workflows/go-ossf-slsa3-publish.yml
@@ -103,7 +103,7 @@ jobs:
         with:
           subject-path: '${{ github.workspace }}/yutu-${{ matrix.artifact }}'
 
-  winget-release:
+  winget:
     needs: [build]
     runs-on: windows-latest
     if: startsWith(github.ref, 'refs/tags/')
@@ -113,3 +113,29 @@ jobs:
           identifier: eat-pray-ai.yutu
           installers-regex: '\.exe$' # Only .exe files
           token: ${{ secrets.RELEASE_PAT }}
+
+  homebrew:
+    needs: [build]
+    runs-on: macos-latest
+    if: false
+    steps:
+      - uses: dawidd6/action-homebrew-bump-formula@v3
+        with:
+          token: ${{ secrets.RELEASE_PAT }}
+          tag: ${{ github.event.release.tag_name }}
+          org: eat-pray-ai
+          formula: yutu
+
+  github-package:
+    needs: [test]
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+    steps:
+      - uses: eat-pray-ai/yutu/.github/actions/github-packages@main
+        with:
+          version: ${{ github.event.release.tag_name }}
