--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -27,77 +27,133 @@ runs:
         ./yutu help
         ./yutu completion
         
+        echo "======= activity ======="
         ./yutu activity --help
+        echo "------- list -------"
         ./yutu activity list --help
         
+        echo "======= caption ======="
         ./yutu caption --help
+        echo "------- delete -------"
         ./yutu caption delete --help
+        echo "------- insert -------"
         ./yutu caption insert --help
+        echo "------- list -------"
         ./yutu caption list --help
+        echo "------- update -------"
         ./yutu caption update --help
         
+        echo "======= channel ======="
         ./yutu channel --help
+        echo "------- list -------"
         ./yutu channel list --help
+        echo "------- update -------"
         ./yutu channel update --help
         
+        echo "======= channelBanner ======="
         ./yutu channelBanner --help
+        echo "------- insert -------"
         ./yutu channelBanner insert --help
         
+        echo "======= channelSection ======="
         ./yutu channelSection --help
+        echo "------- delete -------"
         ./yutu channelSection delete --help
+        echo "------- insert -------"
         ./yutu channelSection list --help
         
+        echo "======= i18nLanguage ======="
         ./yutu i18nLanguage --help
+        echo "------- list -------"
         ./yutu i18nLanguage list --help
         
+        echo "======= i18nRegion ======="
         ./yutu i18nRegion --help
+        echo "------- list -------"
         ./yutu i18nRegion list --help
         
+        echo "======= member ======="
         ./yutu member --help
+        echo "------- list -------"
         ./yutu member list --help
         
+        echo "======= membershipsLevel ======="
         ./yutu membershipsLevel --help
+        echo "------- list -------"
         ./yutu membershipsLevel list --help
         
+        echo "======= playlist ======="
         ./yutu playlist --help
+        echo "------- delete -------"
         ./yutu playlist delete --help
+        echo "------- insert -------"
         ./yutu playlist insert --help
+        echo "------- list -------"
         ./yutu playlist list --help
+        echo "------- update -------"
         ./yutu playlist update --help
         
+        echo "======= playlistItem ======="
         ./yutu playlistItem --help
+        echo "------- delete -------"
         ./yutu playlistItem delete --help
+        echo "------- insert -------"
         ./yutu playlistItem insert --help
+        echo "------- list -------"
         ./yutu playlistItem list --help
+        echo "------- update -------"
         ./yutu playlistItem update --help
         
+        echo "======= search ======="
         ./yutu search --help
+        echo "------- list -------"
         ./yutu search list --help
         
+        echo "======= subscription ======="
         ./yutu subscription --help
+        echo "------- delete -------"
         ./yutu subscription delete --help
+        echo "------- insert -------"
         ./yutu subscription insert --help
+        echo "------- list -------"
         ./yutu subscription list --help
         
+        echo "======= thumbnail ======="
         ./yutu thumbnail --help
+        echo "------- set -------"
         ./yutu thumbnail set --help
         
+        echo "======= version ======="
         ./yutu version --help
         
+        echo "======= video ======="
         ./yutu video --help
+        echo "------- delete -------"
         ./yutu video delete --help
+        echo "------- getRating -------"
         ./yutu video getRating --help
+        echo "------- insert -------"
         ./yutu video insert --help
+        echo "------- list -------"
         ./yutu video list --help
+        echo "------- rate -------"
         ./yutu video rate --help
+        echo "------- update -------"
         ./yutu video update --help
         
+        echo "======= videoAbuseReport ======="
         ./yutu videoAbuseReportReason --help
+        echo "------- list -------"
         ./yutu videoAbuseReportReason list --help
         
+        echo "======= videoCategory ======="
         ./yutu videoCategory --help
+        echo "------- list -------"
         ./yutu videoCategory list --help
         
+        echo "======= watermark ======="
         ./yutu watermark --help
+        echo "------- set -------"
         ./yutu watermark set --help
+        echo "------- unset -------"
         ./yutu watermark unset --help
