--- a/actions/general/action.yml
+++ b/actions/general/action.yml
@@ -3,22 +3,25 @@ description: yutu
 
 inputs:
   version:
-    description: 'The version of the yutu binary to download'
+    description: 'Version of the yutu binary to download'
     required: false
     default: ''
+  credential:
+    description: 'Credential to authenticate with the YouTube API'
+    required: true
   token:
-    description: 'The token to authenticate with the YouTube API'
+    description: 'Token to authenticate with the YouTube API'
     required: true
   command:
-    description: 'The command to run, such as `video`, `channel` or `playlist`'
+    description: 'Command to run, such as `video`, `channel` or `playlist`'
     required: false
     default: 'video'
   subcommand:
-    description: 'The subcommand to run, such as `insert`, `update` or `list`'
+    description: 'Subcommand to run, such as `insert`, `update` or `list`'
     required: false
     default: ''
   flags:
-    description: 'The flags to pass to the command'
+    description: 'Flags passed to the command/subcommand'
     required: false
     default: ''
 
@@ -34,5 +37,6 @@ runs:
     - shell: bash
       run: |
         chmod +x yutu-linux-amd64
+        echo ${{ inputs.credential }} > ./client_secret.json
         echo ${{ inputs.token }} > ./youtube.token.json
         ./yutu-linux-amd64 ${{ inputs.command }} ${{ inputs.subcommand }} ${{ inputs.flags }}
