--- a/actions/upload/action.yml
+++ b/actions/upload/action.yml
@@ -12,7 +12,22 @@ inputs:
   token:
     description: 'Base64 encoded token to authenticate with the YouTube API'
     required: true
-  flags:
+  file:
+    description: 'Path to the video file to upload'
+    required: true
+  title:
+    description: 'Title of the video, used as the filename if not provided'
+    required: false
+    default: ''
+  description:
+    description: 'Description of the video'
+    required: false
+    default: ''
+  tags:
+    description: 'Comma separated list of tags for the video'
+    required: false
+    default: ''
+  rest-flags:
     description: 'Flags passed to the command/subcommand'
     required: true
 
@@ -26,4 +41,4 @@ runs:
         token: ${{ inputs.token }}
         command: video
         subcommand: insert
-        flags: ${{ inputs.flags }}
+        flags: "-f ${{ inputs.file }} -t ${{ inputs.title }} -d ${{ inputs.description }} -T ${{ inputs.tags }} ${{ inputs.rest-flags }}"
