--- a/actions/upload/action.yml
+++ b/actions/upload/action.yml
@@ -41,4 +41,4 @@ runs:
         token: ${{ inputs.token }}
         command: video
         subcommand: insert
-        flags: "-f ${{ inputs.file }} -t ${{ inputs.title }} -d ${{ inputs.description }} -T ${{ inputs.tags }} ${{ inputs.rest-flags }}"
+        flags: '-f ${{ inputs.file }} -t ${{ inputs.title }} -d "${{ inputs.description }}" -T ${{ inputs.tags }} ${{ inputs.rest-flags }}'
