--- a/actions/general/action.yml
+++ b/actions/general/action.yml
@@ -37,6 +37,6 @@ runs:
     - shell: bash
       run: |
         chmod +x yutu-linux-amd64
-        echo ${{ inputs.credential }} | base64 --decode > ./client_secret.json
-        echo ${{ inputs.token }} | base64 --decode > ./youtube.token.json
+        echo -n ${{ inputs.credential }} | base64 --decode > ./client_secret.json
+        echo -n ${{ inputs.token }} | base64 --decode > ./youtube.token.json
         ./yutu-linux-amd64 ${{ inputs.command }} ${{ inputs.subcommand }} ${{ inputs.flags }}
