--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,6 +13,7 @@ env:
 
 before:
   hooks:
+    - go mod tidy
     - go generate ./...
 
 builds:
@@ -27,7 +28,6 @@ builds:
     goarch:
       - amd64
       - arm64
-    main: ./main.go
     flags:
       - -trimpath
       - -tags=netgo
