:construction_worker: Use goreleaser

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,6 +14,7 @@ env:
 before:
   hooks:
     - go mod tidy
+    - go install github.com/tc-hib/go-winres@latest
     - go generate ./...
 
 builds:
