--- a/.github/actions/github-packages/action.yml
+++ b/.github/actions/github-packages/action.yml
@@ -1,20 +1,18 @@
 name: Release to GitHub Packages
 description: Release to GitHub Packages
 
-inputs:
-  version:
-    description: 'The version of the package'
-    required: true
-
 runs:
   using: composite
   steps:
     - uses: actions/checkout@v4
-    - id: ldflags
-      shell: bash
-      run: |
-        echo "commit-date=$(git log -1 --date='format:%Y-%m-%d/%H.%M.%S' --pretty=%cd)" >> "$GITHUB_OUTPUT"
-        echo "commit=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
+      with:
+        sparse-checkout: |
+          Dockerfile
+        sparse-checkout-cone-mode: false
+    - uses: actions/download-artifact@v4
+      with:
+        name: binary
+        path: '${{ github.workspace }}/dist'
     - uses: docker/setup-qemu-action@v3
     - uses: docker/setup-buildx-action@v3
     - uses: docker/login-action@v3
@@ -27,7 +25,7 @@ runs:
       with:
         images: ghcr.io/${{ github.repository }}
     - id: push
-      uses: docker/build-push-action@v5
+      uses: docker/build-push-action@v6
       with:
         context: .
         target: yutu
@@ -36,11 +34,8 @@ runs:
         labels: ${{ steps.meta.outputs.labels }}
         platforms: linux/amd64,linux/arm64
         provenance: true
-        build-args: |
-          version=${{ inputs.version }}
-          commit=${{ steps.ldflags.outputs.commit }}
-          commitDate=${{ steps.ldflags.outputs.commit-date }}
-    - uses: actions/attest-build-provenance@v1
+        sbom: true
+    - uses: actions/attest-build-provenance@v2
       with:
         subject-name: ghcr.io/${{ github.repository }}
         subject-digest: ${{ steps.push.outputs.digest }}
