--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -12,6 +12,6 @@ jobs:
     steps:
       - uses: actions/first-interaction@v1.3.0
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ github.token }}
           issue-message: "Welcome to yutu, thank you for opening your first issue!"
           pr-message: "Welcome to yutu, thank you for opening your first PR!"
