--- a/.github/actions/github-packages/action.yml
+++ b/.github/actions/github-packages/action.yml
@@ -31,6 +31,7 @@ runs:
         target: yutu
         push: true
         tags: ${{ steps.meta.outputs.tags }}
+        annotations: ${{ steps.meta.outputs.annotations }}
         labels: ${{ steps.meta.outputs.labels }}
         platforms: linux/amd64,linux/arm64
         provenance: true
