--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -8,6 +8,14 @@ go_sdk.from_file(go_mod = "//:go.mod")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
+
+go_deps.config(
+    go_env = {
+        "CGO_ENABLED": "0",
+        "GO111MODULE": "on",
+    },
+)
+
 use_repo(
     go_deps,
     "com_github_savioxavier_termlink",
