:boom: Introduce mcp in activity
issue #64

--- a/cmd/activity/BUILD.bazel
+++ b/cmd/activity/BUILD.bazel
@@ -11,6 +11,8 @@ go_library(
     deps = [
         "//cmd",
         "//pkg/activity",
+        "//pkg/utils",
+        "@com_github_mark3labs_mcp_go//mcp",
         "@com_github_spf13_cobra//:cobra",
     ],
 )
