--- a/cmd/caption/BUILD.bazel
+++ b/cmd/caption/BUILD.bazel
@@ -15,6 +15,8 @@ go_library(
     deps = [
         "//cmd",
         "//pkg/caption",
+        "//pkg/utils",
         "@com_github_spf13_cobra//:cobra",
+        "@com_github_spf13_pflag//:pflag",
     ],
 )
