--- a/cmd/channel/BUILD.bazel
+++ b/cmd/channel/BUILD.bazel
@@ -12,6 +12,8 @@ go_library(
     deps = [
         "//cmd",
         "//pkg/channel",
+        "//pkg/utils",
         "@com_github_spf13_cobra//:cobra",
+        "@com_github_spf13_pflag//:pflag",
     ],
 )
