--- a/cmd/comment/BUILD.bazel
+++ b/cmd/comment/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
     deps = [
         "//cmd",
         "//pkg/comment",
+        "//pkg/utils",
         "@com_github_spf13_cobra//:cobra",
     ],
 )
