--- a/cmd/playlist/BUILD.bazel
+++ b/cmd/playlist/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
     deps = [
         "//cmd",
         "//pkg/playlist",
+        "//pkg/utils",
         "@com_github_spf13_cobra//:cobra",
     ],
 )
