--- a/cmd/search/BUILD.bazel
+++ b/cmd/search/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     deps = [
         "//cmd",
         "//pkg/search",
+        "//pkg/utils",
         "@com_github_spf13_cobra//:cobra",
     ],
 )
