--- a/pkg/utils/BUILD.bazel
+++ b/pkg/utils/BUILD.bazel
@@ -5,5 +5,8 @@ go_library(
     srcs = ["utils.go"],
     importpath = "github.com/eat-pray-ai/yutu/pkg/utils",
     visibility = ["//visibility:public"],
-    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
+    deps = [
+        "@com_github_spf13_pflag//:pflag",
+        "@in_gopkg_yaml_v3//:yaml_v3",
+    ],
 )
