:white_check_mark: Fix tests for bool pointer

--- a/pkg/activity/BUILD.bazel
+++ b/pkg/activity/BUILD.bazel
@@ -16,4 +16,5 @@ go_test(
     name = "activity_test",
     srcs = ["activity_test.go"],
     embed = [":activity"],
+    deps = ["//pkg/utils"],
 )
