--- a/pkg/channelSection/BUILD.bazel
+++ b/pkg/channelSection/BUILD.bazel
@@ -16,4 +16,5 @@ go_test(
     name = "channelSection_test",
     srcs = ["channelSection_test.go"],
     embed = [":channelSection"],
+    deps = ["//pkg/utils"],
 )
