--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -22,6 +22,7 @@ go_library(
         "//cmd/member",
         "//cmd/membershipsLevel",
         "//cmd/playlist",
+        "//cmd/playlistImage",
         "//cmd/playlistItem",
         "//cmd/search",
         "//cmd/subscription",
