--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -17,6 +17,7 @@ go_deps.config(
 )
 use_repo(
     go_deps,
+    "com_github_jedib0t_go_pretty_v6",
     "com_github_mark3labs_mcp_go",
     "com_github_savioxavier_termlink",
     "com_github_spf13_cobra",
