--- a/pkg/videoCategory/BUILD.bazel
+++ b/pkg/videoCategory/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//pkg/auth",
         "//pkg/utils",
+        "@com_github_jedib0t_go_pretty_v6//table",
         "@org_golang_google_api//youtube/v3:youtube",
     ],
 )
