--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -19,6 +19,7 @@ use_repo(
     go_deps,
     "com_github_jedib0t_go_pretty_v6",
     "com_github_mark3labs_mcp_go",
+    "com_github_ohler55_ojg",
     "com_github_savioxavier_termlink",
     "com_github_spf13_cobra",
     "com_github_spf13_pflag",
