:boom: Support mcp server
issue #64

--- a/cmd/channel/BUILD.bazel
+++ b/cmd/channel/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "//cmd",
         "//pkg/channel",
         "//pkg/utils",
+        "@com_github_mark3labs_mcp_go//mcp",
         "@com_github_spf13_cobra//:cobra",
         "@com_github_spf13_pflag//:pflag",
     ],
