--- a/cmd/channelSection/BUILD.bazel
+++ b/cmd/channelSection/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "//cmd",
         "//pkg/channelSection",
         "//pkg/utils",
+        "@com_github_mark3labs_mcp_go//mcp",
         "@com_github_spf13_cobra//:cobra",
     ],
 )
