--- a/cmd/videoAbuseReportReason/BUILD.bazel
+++ b/cmd/videoAbuseReportReason/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     deps = [
         "//cmd",
         "//pkg/videoAbuseReportReason",
+        "@com_github_mark3labs_mcp_go//mcp",
         "@com_github_spf13_cobra//:cobra",
     ],
 )
