--- a/cmd/caption/BUILD.bazel
+++ b/cmd/caption/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "//cmd",
         "//pkg/caption",
         "//pkg/utils",
+        "@com_github_mark3labs_mcp_go//mcp",
         "@com_github_spf13_cobra//:cobra",
         "@com_github_spf13_pflag//:pflag",
     ],
