--- a/cmd/comment/BUILD.bazel
+++ b/cmd/comment/BUILD.bazel
@@ -17,6 +17,7 @@ go_library(
         "//cmd",
         "//pkg/comment",
         "//pkg/utils",
+        "@com_github_mark3labs_mcp_go//mcp",
         "@com_github_spf13_cobra//:cobra",
     ],
 )
