--- a/cmd/playlistItem/BUILD.bazel
+++ b/cmd/playlistItem/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
     deps = [
         "//cmd",
         "//pkg/playlistItem",
+        "@com_github_mark3labs_mcp_go//mcp",
         "@com_github_spf13_cobra//:cobra",
     ],
 )
