--- a/cmd/search/BUILD.bazel
+++ b/cmd/search/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "//cmd",
         "//pkg/search",
         "//pkg/utils",
+        "@com_github_mark3labs_mcp_go//mcp",
         "@com_github_spf13_cobra//:cobra",
     ],
 )
