--- a/cmd/subscription/BUILD.bazel
+++ b/cmd/subscription/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//cmd",
         "//pkg/subscription",
         "//pkg/utils",
+        "@com_github_mark3labs_mcp_go//mcp",
         "@com_github_spf13_cobra//:cobra",
     ],
 )
