--- a/cmd/watermark/BUILD.bazel
+++ b/cmd/watermark/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
     deps = [
         "//cmd",
         "//pkg/watermark",
+        "@com_github_mark3labs_mcp_go//mcp",
         "@com_github_spf13_cobra//:cobra",
     ],
 )
